# citera

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/app/: db.py  main.py  models.py  serializers.py  settings.py
apps/api/app/routers/: documents.py  findings.py  platform.py  retrieval.py  reviews.py  rulesets.py  workflow.py
apps/api/app/services/: coverage.py  demo.py  embeddings.py  ingestion.py  llm.py  retrieval.py  review.py  verification.py
apps/api/tests/: conftest.py  test_demo_limits.py  test_documents.py  test_embedding_config.py  test_health.py  test_pack_reviews.py  test_platform.py  test_reports.py  test_retrieval.py  test_reviews.py  test_rulesets.py  test_verification.py  test_workflow.py
apps/web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
apps/web/public/samples/: bpom-icf.md  bpom-protocol.md  fda-onc-icf.md  (+4 more)
apps/web/src/: App.tsx  index.css  main.tsx
docs/: README.md  api.md  architecture.md  claude-mcp.md  claude-native-plan.md  demo-script.md  deployment.md  embedding-architecture.md  embeddings.md  implementation-plan.md  mcp-readiness-audit.md  overview.md  product.md  retrieval.md  roadmap-mvp.md  roadmap.md  rulesets-research.md  rulesets.md  sdk-platform.md  ux-evidence-redesign.md  verification-loop.md
docs/archive/: README.md  citera-v2-architecture.md  demo-script.md  design-principles.md  design-system.md  ux-redesign.md
samples/: README.md  vtz-2201-protocol.md
scripts/: seed_demo.py
(+45 files in other folders)
