[project]
name = "citera"
version = "0.1.0"
description = "Citera — Evidence Intelligence Platform (workspace root)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "citera-api",
    "citera-schemas",
    "citera-pipeline",
    "citera-rulesets",
]

[tool.uv.workspace]
members = ["apps/api", "packages/*"]
# TypeScript packages (sdk, mcp) live under packages/ too — not uv members
exclude = ["packages/sdk", "packages/mcp"]

[tool.uv.sources]
citera-api = { workspace = true }
citera-schemas = { workspace = true }
citera-pipeline = { workspace = true }
citera-rulesets = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages", "apps/api"]
asyncio_mode = "auto"
