[project]
name = "citera-api"
version = "0.1.0"
description = "Citera FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "citera-schemas",
    "citera-pipeline",
    "citera-rulesets",
]

[tool.uv.sources]
citera-schemas = { workspace = true }
citera-pipeline = { workspace = true }
citera-rulesets = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
